--- a/styles/index.css
+++ b/styles/index.css
@@ -6,17 +6,30 @@ body {
   font-family: 'Roboto', sans-serif;
 }
 
-.items-column{ 
-  height : 100%;
-  width: 30%;  
-}
-
 .data-entry-section{
-  position : relative; 
-  left : 30%;  
+  padding-top: 30px; 
+  padding-left: 30px; 
+  float: left; 
+  width: 70%; 
   height : 100%; 
 }
 
 .navHead { 
   display: inline-block; 
+}
+
+.input-group > label { 
+  margin-top: 10px; 
+  display: block;
+}
+.input-group > button { 
+  margin-top: 10px; 
+  display: block;
+}
+
+.items-column {
+  background-color: grey; 
+  float: left; 
+  height : 100%;
+  width: 30%;  
 }
