--- a/styles/index.css
+++ b/styles/index.css
@@ -16,6 +16,7 @@ body {
 
 .navHead { 
   display: inline-block; 
+  padding-left: 20px; 
 }
 
 .input-group > label { 
@@ -35,7 +36,7 @@ body {
   width: 30%;  
 }
 
-li:hover {
+li:hover, .js-navHead:hover{
   background-color: yellow; 
 }
 
@@ -46,8 +47,10 @@ li:hover {
 
 .add-item { 
   display: block; 
-
 }
+
+
+
 
 @media only screen and (max-width: 640px) {
   .data-entry-section, .detail-entry-section{ 
