--- a/styles/index.css
+++ b/styles/index.css
@@ -29,6 +29,17 @@ body {
   display: block;
 }
 
+.js-item-element{ 
+  border: 2px solid black; 
+  padding-top: 10px; 
+  padding-bottom: 10px; 
+  padding-left: 10px; 
+}
+
+ul {
+  list-style: none;
+}
+
 .items-column {
   background-color: grey; 
   float: left; 
