--- a/styles/index.css
+++ b/styles/index.css
@@ -62,9 +62,9 @@ li:hover, .js-navHead:hover, #delete:hover, #js-visit-page:hover{
   display: block; 
 }
 
-.detail-entry-section em{
+.detail-entry-section em, .title-lable{
   border: 3px solid grey;  
-  font-size: 60px; 
+  font-size: 20px; 
   font-weight: bold; 
 }
 
