--- a/styles/index.css
+++ b/styles/index.css
@@ -109,6 +109,9 @@ li:hover, .js-navHead:hover, #delete:hover, #js-visit-page:hover{
 .dropbtn { 
   height: 100%; 
 }
+.navHead-container{ 
+  background-color:darkgrey; 
+}
 
 @media only screen and (max-width: 640px) {
   .data-entry-section, .detail-entry-section{ 
