--- a/styles/index.css
+++ b/styles/index.css
@@ -17,15 +17,14 @@ body {
 
 #bookmark-description{ 
   padding-left:0;
-padding-top:0;
-padding-bottom:0.4em;
-padding-right: 0.4em;
-  /* padding: 0px; 
-  text-align: start;  */
+  padding-top:0;  
+  padding-bottom:0.4em;
+  padding-right: 0.4em;
 }
 .navHead { 
   display: inline-block; 
   padding-left: 20px; 
+  padding-right: 20px; 
 }
 
 .input-group > label { 
